# supervised-ml

./: pyproject.toml
decisionTree/: classifier.ipynb
knn/: knn_classification.ipynb  knn_regression.ipynb
logisticRegression/: ROC.ipynb  hyperParameterTunning.ipynb  imbalancedDataset.ipynb  main.ipynb  multiClassClassification.ipynb
naive bye's/: main.ipynb
randomForest/: main.ipynb
svm/: main.ipynb  svm_kernels.ipynb  svr.ipynb
