[project]
name = "supervised-ml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
